# ezsymlink

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release-please.yml
src/: main.rs
